--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
 #não ao queijo
+<h1>aiaiai</h1>
+
+
+<p> Um cara igual eu, com a mente suicida
+    Precisa de pouco na vida
+    Nada mais pra provar pros outros
+    Liberdade é ponto de vista
+    Tudo, tudo em dia, contas pagas, minas rasas
+    Vou subindo sem fazer ninguém de escada
+    Eu acho chata essa corrida
+    E a abordagem de rotina já não me intimida em nada
+    Eu já não sinto medo, eu me sinto mais vivo que antes
+    Eu preciso viver, eu me sinto mais forte que antes
+    Eu preciso viver, eu me sinto mais forte que antes
+    Era julho de 2001, mais um neguinho na rua
+    Mais um filho de mãe preta, mais um de canela russa
+    Mais um sonhando com tudo, sem nenhum medo do mundo
+    Mermo' com as arma na nunca
+    Bem no meio da divisa, entre a palmeira e o muca
+    E eu peço perdão por todas as vezes
+    Todas as crises, todas as cicatrizes
+    Causadas pela sede, o meu fim não vai ser triste
+    Sou como um peixe na rede
+    Que enfrenta o medo e, tentando fugir, resiste
+    Eu sou um guerrilheiro, eu me sinto mais forte que antes
+    Não há nada em errado você ter teu carro
+    Cê morar no...
+    Você ter, viver do seu dinheiro, do seu sucesso
+    Não tem nada, nada em errado
+    Eu tenho a minha, minha honra, consciência
+    Eu nunca duvidei de você, do teu potencial
+    Não duvidei e não duvido
+    Eu preciso viver, eu me sinto mais forte que antes
+    Filho, quer ver o desenho?
+    Quê que você quer ver?
+    Quer ver o papai?</p>
